Range deleter task does not check for unsharded collection

XMLWordPrintableJSON

    • Fully Compatible
    • ALL
    • Sharding 2020-02-10, Sharding 2020-02-24
    • 25
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Before deleting a range the metadata is checked here and here in case the collection has been dropped and recreated, however it might've been recreated as a unsharded collection, which would hit an invariant when checking for the uuid so, before checking for the uuid, the range deleter should check if the collection is not sharded first.

            Assignee:
            Jack Mulrow
            Reporter:
            Marcos José Grillo Ramirez
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: