SERVER-45900 Check for unsharded collection when submitting range deletion task